fix: ES CLOUD 연결